--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-tooltip": "^5.29.1",
     "recharts": "^3.2.1"
   },
   "devDependencies": {
