--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/genai": "^1.21.0",
     "lucide": "^0.544.0",
     "lucide-react": "^0.544.0",
+    "mime": "^4.1.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-speech-recognition": "^4.0.1",
     "react-tooltip": "^5.29.1",
     "recharts": "^3.2.1"
   },
@@ -23,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-speech-recognition": "^3.9.6",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
